--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -21,13 +21,13 @@
             <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
+                <button class="btn btn-warning text-uppercase float-right">Update Information</button>
             </form>
         </div>
         <div class="col-12 col-lg-6">
             <p class="text-muted">Order History</p>
             <div class="order-history table-responsive">
-                <table class="table-sm table-striped">
+                <table class="table table-striped">
                     <thead>
                       <tr>
                         <th scope="col">Order Number</th>
