--- a/products/templates/products/product_info.html
+++ b/products/templates/products/product_info.html
@@ -27,6 +27,12 @@
                     <h6><a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
                       <i class="fas fa-barcode"></i> {{ product.category.friendly_name }}</a></h6>                  
                     {% endif %}
+                    {% if request.user.is_superuser %}
+                    <small>
+                      <a href="{% url 'edit_product' product.id %}">Edit</a> | 
+                      <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                    </small>
+              {% endif %}      
             </div>
             <hr>
             <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
