--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -45,6 +45,12 @@
                     <h6><a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
                       <i class="fas fa-barcode"></i> {{ product.category.friendly_name }}</a></h6>                  
                     {% endif %}
+                    {% if request.user.is_superuser %}
+                          <small>
+                            <a href="{% url 'edit_product' product.id %}">Edit</a> | 
+                            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                          </small>
+                    {% endif %}
                     <a href="{% url 'product_info' product.id %}" type="button" class="btn btn-success">Buy Me Now</a>
                   </div>
                 </div>
