--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Ecommerce" />
+        <meta name="author" content="developer" />
     {% endblock %}
 
     {% block extra_meta %}
