--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,7 @@
     <!-- Required meta tags -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width">
     <meta name="description" content="Ecommerce" />
     <meta name="author" content="developer" />
     {% endblock %}
