--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -63,15 +63,6 @@
                     {% csrf_token %}
                     <div class="form-group w-50">
                       <div class="input-group">
-                        <div
-                          class="input-group-prepend">
-                          <button class="decrement-qty btn btn-sm btn-black rounded-0" 
-                              data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
-                                <span>
-                                  <i class="fas fa-minus fa-sm"></i>
-                                </span>
-                          </button>
-                        </div>
                         <input
                           class="form-control qty_input"
                           type="number"
@@ -82,15 +73,6 @@
                           data-item_id="{{ item.item_id}}"
                           id="id_qty_{{ item.item_id}}"
                         />
-                        <div
-                          class="input-group-append">
-                          <button class="increment-qty btn btn-sm btn-black rounded-0"
-                              data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
-                                  <span>
-                                     <i class="fas fa-plus fa-sm"></i>
-                                  </span>
-                          </button>
-                        </div>
                         {% if item.product.trainer_sizes or product.available_sizes %}
                         <input
                           type="hidden"
@@ -101,10 +83,13 @@
                       </div>
                     </div>
                   </form>
-                  
-                  <a class="update-link"><button class="btn btn-info btn-sm">Update</button></a>
-                  <a class="remove-item" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><button class="btn btn-danger btn-sm">Remove</button></a>
-                  
+                   <a class="update-link"><button class="btn btn-info btn-sm">
+                     Update</button>
+                    </a>
+                  <a class="remove-item" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}">
+                    <button class="btn btn-danger btn-sm">
+                      Remove</button>
+                    </a>
                 </td>
                 <td>
                   <p>£{{ item.product.price | calc_subtotal:item.quantity }}</p>
