--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %} 
-{% load static %} 
+{% extends "base.html" %}
+{% load static %}
 {% block content %}
 <div class="overlay"></div>
 
@@ -7,10 +7,7 @@
   <div class="col text-center mt-2">
     <h1 class="logo-font">Products</h1>
     {% for c in current_categories %}
-    <a
-      class="badge badge-dark"
-      href="{% url 'products' %}?category={{ c.name }}"
-    >
+    <a class="badge badge-dark" href="{% url 'products' %}?category={{ c.name }}">
       <h5>{{ c.friendly_name }}</h5>
     </a>
     {% endfor %}
@@ -20,14 +17,9 @@
   <p class="text-muted ml-3">
     {% if search_term or current_categories or current_sorting != 'None_None' %}
     <button type="button" class="btn btn-outline-success">
-      <a
-        href="{% url 'products' %}"
-        class="text-decoration-none"
-        style="color: black"
-        >Products Home</a
-      >
+      <a href="{% url 'products' %}" class="text-decoration-none" style="color: black">Products Home</a>
     </button>
-    {% endif %} 
+    {% endif %}
     {{ products|length }} Products{% if search_term %} found for<strong>"{{ search_term }}"</strong>{% endif %}
   </p>
 </div>
@@ -39,62 +31,49 @@
       <div class="card">
         {% if product.image %}
         <a href="{% url 'product_info' product.id %}">
-          <img
-            src="{{ product.image.url }}"
-            class="card-img-top"
-            alt="{{ product.name }}"
-          />
+          <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}" />
         </a>
         {% else %}
         <a href="{% url 'product_info' product.id %}">
-          <img
-            src="{{ MEDIA_URL }}noimage.png"
-            class="card-img-top"
-            alt="{{ product.name }}"
-          />
+          <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="{{ product.name }}" />
         </a>
         {% endif %}
         <div class="card-body">
           <h4 class="card-title">{{ product.name }}</h4>
           <h5 class="card-title">
             £{{ product.price }}
-            <small
-              ><i class="fas fa-grin-stars ml-5"></i> {{ product.rating }} / 5
+            <small><i class="fas fa-grin-stars ml-5"></i> {{ product.rating }} / 5
             </small>
           </h5>
           {% if product.category %}
           <h6>
-            <a
-              class="text-muted"
-              href="{% url 'products' %}?category={{ product.category.name }}"
-            >
-              <i class="fas fa-barcode"></i> {{ product.category.friendly_name}}</a
-            >
+            <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
+              <i class="fas fa-barcode"></i> {{ product.category.friendly_name}}</a>
           </h6>
-          {% endif %} 
+          {% endif %}
+          {% for product_reviews in product.product_reviews_set.all %}
+          <small>
+            <p>
+              <span class="font-weight-bold">
+                {{ product_reviews.author }} &middot;
+              </span>
+              {{ product_reviews }}
+            </p>
+          </small>
+          {% endfor %}
           {% if request.user.is_superuser %}
           <small>
             <a href="{% url 'edit_product' product.id %}">Edit</a> |
-            <a class="text-danger" href="{% url 'delete_product' product.id %}"
-              >Delete</a
-            >
+            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
           </small>
           {% endif %}
-          <a href="{% url 'product_info' product.id %}" class="btn btn-success"
-            >Buy Me Now</a
-          >
+          <a href="{% url 'product_info' product.id %}" class="btn btn-success">Buy Me Now</a>
         </div>
       </div>
     </div>
   </div>
   {% endfor %}
-  <button
-    type="button"
-    onclick="topFunction()"
-    class="btn btn-secondary btn-sm"
-    id="myBtn"
-    title="Go to top"
-  >
+  <button type="button" onclick="topFunction()" class="btn btn-secondary btn-sm" id="myBtn" title="Go to top">
     Top
   </button>
   {% endblock %} {% block postloadjs %} {{ block.super }}
@@ -124,6 +103,5 @@
       document.documentElement.scrollTop = 0;
     }
   </script>
-  </div>
-  {% endblock %}
-
+</div>
+{% endblock %}
